FIX width overflows

--- a/custom.scss
+++ b/custom.scss
@@ -2,11 +2,7 @@ a {
     &.anchor {
         display: block;
         position: relative;
-        top: -75px;
+        top: -100px;
         visibility: hidden;
     }
-}
-
-.list-group-item {
-    background-color: none;
 }
